[project]
name = "prompt-sentinel"
version = "0.1.0"
description = "A package for sentinel detectors and utilities"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "George Kour", email = "kourgeorge@gmail.com" }
]
keywords = ["LLM", "security", "privacy", "langchain", "secret detection"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Operating System :: OS Independent"
]
dependencies = [
  # core dependencies (leave empty or add minimal ones if needed)
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]
dev = ["langchain>=0.1.0", "pytest", "black", "flake8", "mypy"]

[project.scripts]
sentinel = "sentinel.sentinel_detectors:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
